// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTaskNodes — characterization (Task[] + metadata calls) canvas host (no metadata), no progress column 1`] = `
{
  "metadataCalls": [],
  "tasks": [
    {
      "end": 2026-03-01T19:00:00.000Z,
      "id": "aaaaaaaa-0000-0000-0000-000000000001",
      "isDisabled": false,
      "name": "Project 1",
      "progress": 0,
      "start": 2026-01-05T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "task",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "project",
    },
    {
      "end": 2026-01-20T19:00:00.000Z,
      "id": "c1",
      "isDisabled": false,
      "name": "Child 1",
      "progress": 0,
      "start": 2026-01-06T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "task",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "task",
    },
    {
      "end": 2026-02-01T19:00:00.000Z,
      "id": "c2",
      "isDisabled": false,
      "name": "Child 2",
      "progress": 0,
      "start": 2026-01-21T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "task",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "task",
    },
    {
      "end": 2026-02-02T10:00:00.000Z,
      "id": "c3",
      "isDisabled": false,
      "name": "Milestone",
      "progress": 0,
      "start": 2026-02-02T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "task",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "milestone",
    },
    {
      "end": 2026-02-10T19:00:00.000Z,
      "id": "c4",
      "isDisabled": false,
      "name": "Raw parent",
      "progress": 0,
      "start": 2026-02-03T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "task",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "task",
    },
    {
      "end": 2026-02-12T19:00:00.000Z,
      "id": "c5",
      "isDisabled": false,
      "name": "Coloured",
      "progress": 0,
      "start": 2026-02-11T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#ffd17a",
        "backgroundSelectedColor": "#ffbd52",
        "entityLogicalName": "task",
        "progressColor": "#ffa629",
        "progressSelectedColor": "#ff8c00",
      },
      "type": "task",
    },
    {
      "end": 2026-02-14T19:00:00.000Z,
      "id": "o1",
      "isDisabled": false,
      "name": "Other entity",
      "progress": 0,
      "start": 2026-02-13T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#9ac3d9",
        "backgroundSelectedColor": "#70a9cc",
        "entityLogicalName": "msdyn_other",
        "progressColor": "#4b8fbf",
        "progressSelectedColor": "#2975b2",
      },
      "type": "task",
    },
  ],
}
`;

exports[`generateTaskNodes — characterization (Task[] + metadata calls) model app, entity colours, editable 1`] = `
{
  "metadataCalls": [
    [
      "task",
      "EntityColor",
    ],
    [
      "msdyn_other",
      "EntityColor",
    ],
    [
      "msdyn_third",
      "EntityColor",
    ],
  ],
  "tasks": [
    {
      "end": 2026-03-01T19:00:00.000Z,
      "id": "aaaaaaaa-0000-0000-0000-000000000001",
      "isDisabled": false,
      "name": "Project 1",
      "progress": 40,
      "start": 2026-01-05T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "project",
    },
    {
      "end": 2026-01-20T19:00:00.000Z,
      "id": "c1",
      "isDisabled": false,
      "name": "Child 1",
      "progress": 40,
      "start": 2026-01-06T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "task",
    },
    {
      "end": 2026-02-01T19:00:00.000Z,
      "id": "c2",
      "isDisabled": false,
      "name": "Child 2",
      "progress": 40,
      "start": 2026-01-21T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "task",
    },
    {
      "end": 2026-02-02T10:00:00.000Z,
      "id": "c3",
      "isDisabled": false,
      "name": "Milestone",
      "progress": 40,
      "start": 2026-02-02T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "milestone",
    },
    {
      "end": 2026-02-10T19:00:00.000Z,
      "id": "c4",
      "isDisabled": false,
      "name": "Raw parent",
      "progress": 40,
      "start": 2026-02-03T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "task",
    },
    {
      "end": 2026-02-12T19:00:00.000Z,
      "id": "c5",
      "isDisabled": false,
      "name": "Coloured",
      "progress": 40,
      "start": 2026-02-11T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#ffd17a",
        "backgroundSelectedColor": "#ffbd52",
        "entityLogicalName": "task",
        "progressColor": "#ffa629",
        "progressSelectedColor": "#ff8c00",
      },
      "type": "task",
    },
    {
      "end": 2026-02-14T19:00:00.000Z,
      "id": "o1",
      "isDisabled": false,
      "name": "Other entity",
      "progress": 75,
      "start": 2026-02-13T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#b3926f",
        "backgroundSelectedColor": "#a6784c",
        "entityLogicalName": "msdyn_other",
        "progressColor": "#995e2e",
        "progressSelectedColor": "#8b4513",
      },
      "type": "task",
    },
  ],
}
`;

exports[`generateTaskNodes — characterization (Task[] + metadata calls) model app, option-set colours, read-only 1`] = `
{
  "metadataCalls": [
    [
      "task",
      "EntityColor",
    ],
    [
      "task",
      "klein_colorcode",
    ],
    [
      "task",
      "klein_colorcode",
    ],
    [
      "task",
      "EntityColor",
    ],
    [
      "msdyn_other",
      "klein_colorcode",
    ],
    [
      "task",
      "klein_colorcode",
    ],
    [
      "msdyn_other",
      "klein_colorcode",
    ],
    [
      "msdyn_third",
      "klein_colorcode",
    ],
    [
      "task",
      "EntityColor",
    ],
  ],
  "tasks": [
    {
      "end": 2026-03-01T19:00:00.000Z,
      "id": "aaaaaaaa-0000-0000-0000-000000000001",
      "isDisabled": true,
      "name": "Project 1",
      "progress": 40,
      "start": 2026-01-05T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "project",
    },
    {
      "end": 2026-01-20T19:00:00.000Z,
      "id": "c1",
      "isDisabled": true,
      "name": "Child 1",
      "progress": 40,
      "start": 2026-01-06T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#86b381",
        "backgroundSelectedColor": "#62a65d",
        "entityLogicalName": "task",
        "progressColor": "#40993d",
        "progressSelectedColor": "#228b22",
      },
      "type": "task",
    },
    {
      "end": 2026-02-01T19:00:00.000Z,
      "id": "c2",
      "isDisabled": true,
      "name": "Child 2",
      "progress": 40,
      "start": 2026-01-21T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#d99891",
        "backgroundSelectedColor": "#cc6f68",
        "entityLogicalName": "task",
        "progressColor": "#bf4743",
        "progressSelectedColor": "#b22222",
      },
      "type": "task",
    },
    {
      "end": 2026-02-02T10:00:00.000Z,
      "id": "c3",
      "isDisabled": true,
      "name": "Milestone",
      "progress": 40,
      "start": 2026-02-02T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#99d6ff",
        "backgroundSelectedColor": "#70c1ff",
        "entityLogicalName": "task",
        "progressColor": "#47a9ff",
        "progressSelectedColor": "#1e90ff",
      },
      "type": "milestone",
    },
    {
      "end": 2026-02-10T19:00:00.000Z,
      "id": "c4",
      "isDisabled": true,
      "name": "Raw parent",
      "progress": 40,
      "start": 2026-02-03T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#d99891",
        "backgroundSelectedColor": "#cc6f68",
        "entityLogicalName": "task",
        "progressColor": "#bf4743",
        "progressSelectedColor": "#b22222",
      },
      "type": "task",
    },
    {
      "end": 2026-02-12T19:00:00.000Z,
      "id": "c5",
      "isDisabled": true,
      "name": "Coloured",
      "progress": 40,
      "start": 2026-02-11T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#ffd17a",
        "backgroundSelectedColor": "#ffbd52",
        "entityLogicalName": "task",
        "progressColor": "#ffa629",
        "progressSelectedColor": "#ff8c00",
      },
      "type": "task",
    },
    {
      "end": 2026-02-14T19:00:00.000Z,
      "id": "o1",
      "isDisabled": true,
      "name": "Other entity",
      "progress": 75,
      "start": 2026-02-13T10:00:00.000Z,
      "styles": {
        "backgroundColor": "#86b381",
        "backgroundSelectedColor": "#62a65d",
        "entityLogicalName": "msdyn_other",
        "progressColor": "#40993d",
        "progressSelectedColor": "#228b22",
      },
      "type": "task",
    },
  ],
}
`;
